Consolidate grid controls into horizontal toolbars with inline totals
Changed files:
- js/forecast.js: Restructured all grids (accounts, transactions, budget, projections) to use horizontal toolbar layout with inline totals on right side
- styles/app.css: Added .grid-toolbar and .toolbar-totals CSS for horizontal layout, removed standalone totals card styling

--- a/userData/assets/app-data.json
+++ b/userData/assets/app-data.json
@@ -232,10 +232,10 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-01-01",
-          "balance": 53500,
-          "income": 25000,
-          "expenses": -13500,
-          "netChange": 38500,
+          "balance": 43500,
+          "income": 20000,
+          "expenses": -8500,
+          "netChange": 28500,
           "period": 1
         },
         {
@@ -244,7 +244,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-02-01",
-          "balance": 87000,
+          "balance": 77000,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -256,7 +256,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-03-01",
-          "balance": 120500,
+          "balance": 110500,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -268,10 +268,10 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-04-01",
-          "balance": 159000,
-          "income": 25000,
-          "expenses": -13500,
-          "netChange": 38500,
+          "balance": 139000,
+          "income": 20000,
+          "expenses": -8500,
+          "netChange": 28500,
           "period": 4
         },
         {
@@ -280,7 +280,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-05-01",
-          "balance": 192500,
+          "balance": 172500,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -292,7 +292,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-06-01",
-          "balance": 226000,
+          "balance": 206000,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -304,10 +304,10 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-07-01",
-          "balance": 264500,
-          "income": 25000,
-          "expenses": -13500,
-          "netChange": 38500,
+          "balance": 234500,
+          "income": 20000,
+          "expenses": -8500,
+          "netChange": 28500,
           "period": 7
         },
         {
@@ -316,7 +316,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-08-01",
-          "balance": 298000,
+          "balance": 268000,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -328,7 +328,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-09-01",
-          "balance": 331500,
+          "balance": 301500,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -340,10 +340,10 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-10-01",
-          "balance": 370000,
-          "income": 25000,
-          "expenses": -13500,
-          "netChange": 38500,
+          "balance": 330000,
+          "income": 20000,
+          "expenses": -8500,
+          "netChange": 28500,
           "period": 10
         },
         {
@@ -352,7 +352,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-11-01",
-          "balance": 403500,
+          "balance": 363500,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -364,7 +364,7 @@
           "accountId": 1,
           "account": "Checking Account",
           "date": "2026-12-01",
-          "balance": 437000,
+          "balance": 397000,
           "income": 25000,
           "expenses": -8500,
           "netChange": 33500,
@@ -376,10 +376,10 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-01-01",
-          "balance": -30000,
-          "income": -5000,
-          "expenses": 25000,
-          "netChange": -30000,
+          "balance": -20000,
+          "income": 0,
+          "expenses": 20000,
+          "netChange": -20000,
           "period": 1
         },
         {
@@ -388,7 +388,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-02-01",
-          "balance": -55000,
+          "balance": -45000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -400,7 +400,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-03-01",
-          "balance": -80000,
+          "balance": -70000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -412,10 +412,10 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-04-01",
-          "balance": -110000,
-          "income": -5000,
-          "expenses": 25000,
-          "netChange": -30000,
+          "balance": -90000,
+          "income": 0,
+          "expenses": 20000,
+          "netChange": -20000,
           "period": 4
         },
         {
@@ -424,7 +424,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-05-01",
-          "balance": -135000,
+          "balance": -115000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -436,7 +436,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-06-01",
-          "balance": -160000,
+          "balance": -140000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -448,10 +448,10 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-07-01",
-          "balance": -190000,
-          "income": -5000,
-          "expenses": 25000,
-          "netChange": -30000,
+          "balance": -160000,
+          "income": 0,
+          "expenses": 20000,
+          "netChange": -20000,
           "period": 7
         },
         {
@@ -460,7 +460,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-08-01",
-          "balance": -215000,
+          "balance": -185000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -472,7 +472,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-09-01",
-          "balance": -240000,
+          "balance": -210000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -484,10 +484,10 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-10-01",
-          "balance": -270000,
-          "income": -5000,
-          "expenses": 25000,
-          "netChange": -30000,
+          "balance": -230000,
+          "income": 0,
+          "expenses": 20000,
+          "netChange": -20000,
           "period": 10
         },
         {
@@ -496,7 +496,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-11-01",
-          "balance": -295000,
+          "balance": -255000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -508,7 +508,7 @@
           "accountId": 2,
           "account": "Salary",
           "date": "2026-12-01",
-          "balance": -320000,
+          "balance": -280000,
           "income": 0,
           "expenses": 25000,
           "netChange": -25000,
@@ -912,9 +912,9 @@
           "occurrenceDate": "2026-01-31",
           "periodicChange": null,
           "status": {
-            "name": "planned",
-            "actualAmount": null,
-            "actualDate": null
+            "name": "actual",
+            "actualAmount": 3000,
+            "actualDate": "2026-01-27"
           },
           "tags": [
             "housing"
@@ -932,8 +932,8 @@
           "occurrenceDate": "2026-02-28",
           "periodicChange": null,
           "status": {
-            "name": "planned",
-            "actualAmount": null,
+            "name": "actual",
+            "actualAmount": 5,
             "actualDate": null
           },
           "tags": [
