Add automatic data migration system
- Created data-migration.js with schema transformation functions
- Account migration: balance to startingBalance, currency object
- Transaction migration: debitAccount/creditAccount to primaryAccountId/secondaryAccountId/transactionTypeId
- Recurrence migration: type ID mapping and structure changes
- Integrated migration into app startup (forecast.js)
- Added .gitignore entries for user data files
- Updated technical documentation
- Reset app-data.json to clean example state

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ Thumbs.db
 migrate-to-scenarios.js
 *.backup
 test-calculations.js
+app-data.json
+app-data.json.backup
 
 # Ignore user data and sensitive files
 
