Implement periodic change UI wiring with ID-based data model
Changed files:
- js/periodic-change-utils.js: New utility module with ID expansion and display formatting
- js/modal-periodic-change.js: Updated to save IDs only (changeMode, changeType) instead of objects
- js/projection-engine.js: Added ID expansion before passing to calculation functions
- js/forecast.js: Added periodicChange columns for accounts and transactions grids
- styles/app.css: Added styling for periodic change cells and icons
- userData/assets/app-data.json.example: Added sample periodicChange with ID-based structure

--- a/userData/assets/app-data.json.example
+++ b/userData/assets/app-data.json.example
@@ -35,7 +35,11 @@
           },
           "startingBalance": 15000,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": {
+            "value": 2.5,
+            "changeMode": 1,
+            "changeType": 2
+          }
         },
         {
           "id": 2,
