--- a/userData/assets/app-data.json.example
+++ b/userData/assets/app-data.json.example
@@ -12,7 +12,7 @@
         "showActualTransactions": true,
         "showProjections": true,
         "accountColumns": ["name", "type", "currency", "startingBalance", "openDate"],
-        "transactionColumns": ["debitAccount", "creditAccount", "amount", "description", "tags"]
+        "transactionColumns": ["primaryAccount", "secondaryAccount", "transactionType", "amount", "description", "tags"]
       },
       "description": "Personal monthly budget",
       "startDate": "2026-01-01",
