--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ftrack",
-  "version": "0.6.2",
+  "version": "0.7.0-beta",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
