Cleaning up Documentation, creating repo analysis ai workflow, move planning out of docs

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@ app-data.json.backup
 # Ignore user data and sensitive files
 
 *.json.bak
-Documentation/project-notes.ipynb
+Documentation/Plans/project-notes.md
