--- a/userData/assets/app-data.json
+++ b/userData/assets/app-data.json
@@ -47,7 +47,9 @@
           },
           "startingBalance": 15000,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": null,
+          "goalAmount": null,
+          "goalDate": null
         },
         {
           "id": 2,
@@ -62,7 +64,9 @@
           },
           "startingBalance": 0,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": null,
+          "goalAmount": null,
+          "goalDate": null
         },
         {
           "id": 3,
@@ -77,7 +81,9 @@
           },
           "startingBalance": 0,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": null,
+          "goalAmount": null,
+          "goalDate": null
         }
       ],
       "transactions": [
@@ -237,7 +243,9 @@
           },
           "startingBalance": 15000,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": null,
+          "goalAmount": null,
+          "goalDate": null
         },
         {
           "id": 2,
@@ -252,7 +260,9 @@
           },
           "startingBalance": 0,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": null,
+          "goalAmount": null,
+          "goalDate": null
         },
         {
           "id": 3,
@@ -267,7 +277,9 @@
           },
           "startingBalance": 0,
           "openDate": "2026-01-01",
-          "periodicChange": null
+          "periodicChange": null,
+          "goalAmount": null,
+          "goalDate": null
         }
       ],
       "transactions": [
@@ -2540,7 +2552,98 @@
         }
       ],
       "budgets": []
+    },
+    {
+      "id": 3,
+      "name": "New Scenario",
+      "type": {
+        "id": 6,
+        "name": "Advanced Goal Solver",
+        "description": "Multi-goal planning with constraints and solver-driven suggestions",
+        "showAccounts": true,
+        "showPlannedTransactions": true,
+        "showActualTransactions": false,
+        "showProjections": true,
+        "showGeneratePlan": true,
+        "showBudget": false
+      },
+      "description": "",
+      "startDate": "2026-02-08",
+      "endDate": "2026-02-08",
+      "projectionPeriod": null,
+      "accounts": [
+        {
+          "id": 1,
+          "name": "New Account",
+          "type": {
+            "id": 1,
+            "name": "Asset"
+          },
+          "currency": null,
+          "startingBalance": 0,
+          "openDate": "2026-02-08",
+          "periodicChange": null,
+          "accountType": "Unknown",
+          "goalAmount": 10000,
+          "goalDate": "2030-12-31",
+          "periodicChangeSummary": ""
+        },
+        {
+          "id": 2,
+          "name": "jd",
+          "type": {
+            "id": 4,
+            "name": "Income"
+          },
+          "currency": null,
+          "startingBalance": 0,
+          "openDate": "2026-02-08",
+          "periodicChange": null,
+          "accountType": "Unknown"
+        }
+      ],
+      "transactions": [],
+      "projections": [
+        {
+          "id": 1,
+          "scenarioId": 3,
+          "accountId": 1,
+          "account": "New Account",
+          "date": "2026-02-08",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "interest": 0,
+          "period": 1
+        }
+      ],
+      "budgets": [],
+      "advancedGoalSettings": {
+        "goals": [
+          {
+            "id": "g_1770559865462_83624",
+            "priority": 1,
+            "accountId": 1,
+            "type": "reach_balance_by_date",
+            "targetAmount": 10000,
+            "deltaAmount": null,
+            "floorAmount": null,
+            "startDate": "2026-02-08",
+            "endDate": "2030-12-31"
+          }
+        ],
+        "constraints": {
+          "fundingAccountId": 1,
+          "maxOutflowPerMonth": 10,
+          "lockedAccountIds": [
+            2
+          ],
+          "maxMovementByAccountId": {},
+          "minBalanceFloorsByAccountId": {}
+        }
+      }
     }
   ],
-  "migrationVersion": 3
+  "migrationVersion": 4
 }
