V2 of QC: tests per module

--- a/package.json
+++ b/package.json
@@ -13,9 +13,27 @@
     "build:linux": "electron-builder --linux",
     "qc:verify": "node QC/verify.js --scenario=General",
     "qc:verify:all": "node QC/verify.js --all",
+    "qc:verify:budget": "node QC/verify.js --scenario=Budget",
+    "qc:verify:funds": "node QC/verify.js --scenario=Funds",
+    "qc:verify:debt": "node QC/verify.js --scenario=Debt Repayment",
+    "qc:verify:goals": "node QC/verify.js --scenario=Goal-Based",
+    "qc:verify:solver": "node QC/verify.js --scenario=Advanced Goal Solver",
     "qc:verify:verbose": "node QC/verify.js --scenario=General --verbose",
-    "qc:test": "node --test QC/qc-tests.js",
-    "qc:full": "npm run qc:verify && npm run qc:test",
+    "qc:test": "node QC/run-tests.js",
+    "qc:test:calculation-utils": "node QC/run-calculation-utils.js",
+    "qc:test:financial-utils": "node QC/run-financial-utils.js",
+    "qc:test:date-utils": "node QC/run-date-utils.js",
+    "qc:test:transaction-expander": "node QC/run-transaction-expander.js",
+    "qc:test:projection-engine": "node QC/run-projection-engine.js",
+    "qc:test:periodic-change-utils": "node QC/run-periodic-change-utils.js",
+    "qc:test:lookup-data": "node QC/run-lookup-data.js",
+    "qc:test:qc-data": "node QC/run-qc-data.js",
+    "qc:test:goal-based": "node QC/run-goal-based.js",
+    "qc:test:advanced-goal-solver": "node QC/run-advanced-goal-solver.js",
+    "qc:full": "node QC/run-all.js",
+    "qc:expand": "node QC/generators/expand-qc-dataset.js",
+    "qc:report": "node QC/generate-qc-report.js",
+    "qc:report:output": "node QC/generate-qc-report.js --output",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
