--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ftrack",
-  "version": "0.7.1-beta",
+  "version": "0.8.0-alpha",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
