--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ftrack",
-  "version": "0.8.1-alpha",
+  "version": "0.8.2-beta",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
